Fixing of margin on projects on smaller displays

--- a/style.css
+++ b/style.css
@@ -182,6 +182,12 @@ hr {
   transition: background-color ease 0.3s;
 }
 
+@media only screen and (max-width: 600px) {
+  .project {
+    margin: 10px 20px;
+  }
+}
+
 .project p {
   margin: 10px;
 }
